--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,11 +1,5 @@
 # syntax=docker/dockerfile:1
 
-# Comments are provided throughout this file to help you get started.
-# If you need more help, visit the Dockerfile reference guide at
-# https://docs.docker.com/go/dockerfile-reference/
-
-# Want to help us make this template better? Share your feedback here: https://forms.gle/ybq9Krt8jtBL3iCk7
-
 ARG PYTHON_VERSION=3.10.12
 FROM python:${PYTHON_VERSION}-slim as base
 
@@ -18,8 +12,6 @@ ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
-# Create a non-privileged user that the app will run under.
-# See https://docs.docker.com/go/dockerfile-user-best-practices/
 ARG UID=10001
 RUN adduser \
     --disabled-password \
@@ -30,10 +22,7 @@ RUN adduser \
     --uid "${UID}" \
     appuser
 
-# Download dependencies as a separate step to take advantage of Docker's caching.
-# Leverage a cache mount to /root/.cache/pip to speed up subsequent builds.
-# Leverage a bind mount to requirements.txt to avoid having to copy them into
-# into this layer.
+
 RUN --mount=type=cache,target=/root/.cache/pip \
     --mount=type=bind,source=requirements.txt,target=requirements.txt \
     python -m pip install -r requirements.txt
@@ -43,6 +32,18 @@ USER appuser
 
 # Copy the source code into the container.
 COPY . .
+
+# Use ARG to pass AWS credentials
+ARG AWS_ACCESS_KEY
+ARG AWS_SECRET_KEY
+ARG AWS_BUCKET_NAME
+
+# Export them as environment variables
+ENV AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY
+ENV AWS_SECRET_ACCESS_KEY=$AWS_SECRET_KEY
+ENV AWS_BUCKET_NAME=$AWS_BUCKET_NAME
+
+
 
 # Expose the port that the application listens on.
 EXPOSE 8000
