added vite api url variable

--- a/front-end-nextjs/Dockerfile
+++ b/front-end-nextjs/Dockerfile
@@ -34,6 +34,12 @@ COPY . .
 RUN chown -R node:node /usr/src/app
 
 
+# Use ARG to pass the API URL
+ARG REACT_APP_API_URL
+
+# Export it as environment variable
+ENV REACT_APP_API_URL=$REACT_APP_API_URL
+
 # Run the application as a non-root user.
 USER node
 
