removed the bucket name env variable

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,10 @@ jobs:
     env:
       AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
       AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-      AWS_BUCKET_NAME: ${{ secrets.AWS_BUCKET_NAME }}
+      EKS_CLUSTER_NAME: ${{ secrets.EKS_CLUSTER_NAME }}
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
+      REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
 
     steps:
     - name: Checkout code
@@ -31,7 +34,7 @@ jobs:
       uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-region: eu-west-1
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     - name: Set up Docker Buildx
@@ -71,7 +74,7 @@ jobs:
         terrfaorm apply -auto-approve
 
     - name: Access Cluster
-      run: aws eks update-kubeconfig --location <region> --name <name of cluster>
+      run: aws eks update-kubeconfig --location eu-west-1 --name ${{ secrets.EKS_CLUSTER_NAME }}
 
 
 
