--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
           --build-arg AWS_BUCKET_NAME=${{ secrets.AWS_BUCKET_NAME }} \
           -t ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest \
           .
-          
+
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest
 
     - name: Build and push Frontend Docker image
@@ -64,7 +64,9 @@ jobs:
         cd front-end-nextjs
         docker build \
           --build-arg REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }} \
-          -t ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest 
+          -t ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest \
+          .
+
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest
 
 
