--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,7 +78,32 @@ jobs:
         terraform apply -auto-approve tfplan
 
     - name: Access Cluster
-      run: aws eks update-kubeconfig --location eu-west-1 --name ${{ secrets.EKS_CLUSTER_NAME }}
+      run: aws eks update-kubeconfig --location eu-west-1 --name fullStackAppCluster
 
 
+  destroy:
+    runs-on: ubuntu-latest
+    needs: deploy # This ensures the destroy job runs after the deploy job
+
+    if: github.event_name == 'workflow_dispatch'
+        
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+    
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3 
+    
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: eu-west-1
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    
+      - name: Destroy Kubernetes Cluster
+        run: |
+          cd terraform-eks
+          terraform init
+          terraform destroy -var-file=terraform.tfvars -auto-approve      
 
