--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,16 @@ on:
   push:
     branches:
       - master
+  workflow_dispatch:
+    inputs:
+      destroy:
+        description: 'Destroy the Kubernetes Cluster'
+        required: false
+        default: 'no'
+        type: choice
+        options:
+          - 'yes'
+          - 'no'
 
 jobs:
   deploy:
@@ -84,7 +94,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy      # This ensures the destroy job runs after the deploy job
 
-    if: github.event_name == 'workflow_dispatch'
+    if: ${{ github.event.inputs.destroy == 'yes' }}
         
     steps:
       - name: Checkout code
