--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,7 +94,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy      # This ensures the destroy job runs after the deploy job
 
-    if: ${{ github.ref == 'refs/heads/master' && github.event.inputs.destroy == 'yes' }}
+    if: ${{ github.event_name == 'workflow_dispatch' || github.event_name == 'push' && github.ref == 'refs/heads/master' }} # Adjust condition as needed
         
     steps:
       - name: Checkout code
