--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,6 +91,8 @@ jobs:
 
     - name: Install Grafana into the cluster
       run: |
+        helm repo add grafana https://grafana.github.io/helm-charts
+        helm repo update
         helm install grafana grafana/grafana --namespace grafana --set persistence.enabled=true --set adminUser=admin --set adminPassword=admin256  
 
 
