adjusted the directory path for the manifest file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,8 +81,8 @@ jobs:
 
     - name: Update Kubernetes Manifests
       run: |
-        sed -i 's|image: zenitugo/frontend:{{ IMAGE_TAG }}|image: zenitugo/frontend:${{ github.sha }}|' ./manifest/frontend.yaml
-        sed -i 's|image: zenitugo/backend:{{ IMAGE_TAG }}|image: zenitugo/backend:${{ github.sha }}|' ./manifest/backend.yaml
+        sed -i 's|image: zenitugo/frontend:{{ IMAGE_TAG }}|image: zenitugo/frontend:${{ github.sha }}|' manifest/frontend.yaml
+        sed -i 's|image: zenitugo/backend:{{ IMAGE_TAG }}|image: zenitugo/backend:${{ github.sha }}|' manifest/backend.yaml
 
 
     - name: Commit and Push Updated Manifests
