--- a/manifest/backend.yml
+++ b/manifest/backend.yml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: zenitugo/backend:{{ IMAGE_TAG }}
+          image: zenitugo/backend:latest
           resources:
             requests:
               cpu: "250m"
