--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,6 +98,7 @@ jobs:
         kubectl create ns ingress
         kubectl create ns cloudwatch
         kubectl create ns qr-code
+        kubectl create ns cert-manager
 
     - name: Install Grafana into the cluster
       run: |
