--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -124,8 +124,8 @@ jobs:
           
     - name: Install Cert-Manager Kubectl Plugin
       run: |
-        curl -L -o kubectl-cert-manager.tar.gz https://github.com/jetstack/cert-manager/releases/latest/download/kubectl-cert_manager-linux-amd64.tar.gz
-        tar xzf kubectl-cert-manager.tar.gz
+        curl -L -o kubectl-cert-manager-linux-amd64.tar.gz https://github.com/jetstack/cert-manager/releases/latest/download/kubectl-cert_manager-linux-amd64.tar.gz
+        tar xzf kubectl-cert-manager-linux-amd64.tar.gz
         sudo mv kubectl-cert_manager /usr/local/bin 
 
     - name: Install Flux CLI
