--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -128,19 +128,23 @@ jobs:
     #     tar xzf kubectl-cert-manager-linux-amd64.tar.gz
     #     sudo mv kubectl-cert_manager /usr/local/bin 
 
+    - name: Create GitHub Token Secret in Cluster
+      run: |
+        kubectl create secret generic github-token-secret \
+        --from-literal=GITHUB_TOKEN=${{ secrets.gh_token }} \
+        --namespace=<your-namespace>
+  
+
     - name: Install Flux CLI
       run: |
         curl -s https://fluxcd.io/install.sh | sudo bash
-
-    - name: Set github token for flux
-      run: export GITHUB_TOKEN=${{ secrets.gh_token}}
 
     - name: Bootstrap Flux with Github
       run: |
         flux bootstrap github \
         --token-auth \
         --owner=Zenitugo \
-        --repository=my-repository-name \
+        --repository=ci-cd-three-tier-project \
         --branch=master \
         --path=./manifest \
         --personal      
