--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -160,7 +160,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy      # This ensures the destroy job runs after the deploy job
 
-    if: ${{ github.event_name == 'workflow_dispatch' && github.event_name == 'push' && github.ref == 'refs/heads/master' }} # Adjust condition as needed
+    if: ${{ github.event_name == 'workflow_dispatch' || github.event_name == 'push' && github.ref == 'refs/heads/master' }} # Adjust condition as needed
         
     steps:
       - name: Checkout code
