--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,18 +5,19 @@ on:
       - master
   workflow_dispatch:
     inputs:
-      destroy:
-        description: 'Destroy the Kubernetes Cluster'
-        required: false
-        default: 'no'
+      action:
+        description: 'Actions to perform'
+        required: true
+        default: 'deploy'
         type: choice
         options:
-          - 'yes'
-          - 'no'
+          - 'deploy'
+          - 'destroy'
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    if: github.event.inputs.action == 'deploy' || github.event_name == 'push'
     
     env:
       AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
@@ -24,7 +25,7 @@ jobs:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
       REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
-      GITHUB_TOKEN: ${{ secrets.gh_token }}
+      GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
     steps:
     - name: Checkout code
@@ -122,45 +123,35 @@ jobs:
       run: 
         helm repo add jetstack https://charts.jetstack.io && helm repo update && helm install cert-manager jetstack/cert-manager --namespace cert-manager --version v1.15.3 --set installCRDs=true --set prometheus.enabled=false
           
-    # - name: Install Cert-Manager Kubectl Plugin
-    #   run: |
-    #     curl -L -o kubectl-cert-manager-linux-amd64.tar.gz https://github.com/jetstack/cert-manager/releases/latest/download/kubectl-cert_manager-linux-amd64.tar.gz
-    #     tar xzf kubectl-cert-manager-linux-amd64.tar.gz
-    #     sudo mv kubectl-cert_manager /usr/local/bin 
 
-    # - name: Create GitHub Token Secret in Cluster
-    #   run: |
-    #     kubectl create secret generic github-token-secret \
-    #     --from-literal=GITHUB_TOKEN=${{ secrets.gh_token }} \
-    #     --namespace=<your-namespace>
-  
+    - name: Set up GitHub Token for flux
+      run: export GITHUB_TOKEN=${{ secrets.GH_TOKEN }}
 
-    # - name: Install Flux CLI
-    #   run: |
-    #     curl -s https://fluxcd.io/install.sh | sudo bash
+    - name: Install Flux CLI
+      run: |
+        curl -s https://fluxcd.io/install.sh | sudo bash
 
-    # - name: Bootstrap Flux with Github
-    #   run: |
-    #     flux bootstrap github \
-    #     --token-auth \
-    #     --owner=Zenitugo \
-    #     --repository=ci-cd \
-    #     --branch=master \
-    #     --path=./manifest \
-    #     --personal      
+    - name: Bootstrap Flux with Github
+      run: |
+        flux bootstrap github \
+        --token-auth \
+        --owner=Zenitugo \
+        --repository=ci-cd \
+        --branch=master \
+        --path=./manifest \
+        --personal      
         
-    # - name: Deploy cloud watch and ingress-nginx
-    #   run: |
-    #     cd metrics-routing
-    #     kubectl apply -f cloudwatch.yml
-    #     kubectl apply -f cloudwatch-config.yml
-    #     kubectl apply -f ingressnginx.yml
+    - name: Deploy cloud watch and ingress-nginx
+      run: |
+        cd metrics-routing
+        kubectl apply -f cloudwatch.yml
+        kubectl apply -f cloudwatch-config.yml
+        kubectl apply -f ingressnginx.yml
 
   destroy:
-    runs-on: ubuntu-latest
-    needs: deploy      # This ensures the destroy job runs after the deploy job
+    runs-on: ubuntu-latest      # This ensures the destroy job runs after the deploy job
 
-    if: ${{ github.event_name == 'workflow_dispatch' || github.event_name == 'push' && github.ref == 'refs/heads/master' }} # Adjust condition as needed
+    if: github.event.inputs.action == 'destroy'
         
     steps:
       - name: Checkout code
