--- a/manifest/backend.yml
+++ b/manifest/backend.yml
@@ -58,9 +58,11 @@ metadata:
     app: fastapi
     type: backend
 spec:
+  type: NodePort
   selector:
     app: fastapi
     type: backend
   ports:
   - port: 8000
     targetPort: 8000
+    nodePort: 30000
