--- a/manifest/frontend.yml
+++ b/manifest/frontend.yml
@@ -30,21 +30,21 @@ spec:
               memory: "128Mi"
           ports:
           - containerPort: 3000
-          livenessProbe:
-            httpGet:
-              path: /healthz
-              port: 3000
-            initialDelaySeconds: 300
-            periodSeconds: 3
-          readinessProbe:
-            httpGet:
-              path: /
-              port: 3000
-            initialDelaySeconds: 30
-            periodSeconds: 3
-            timeoutSeconds: 2
-            failureThreshold: 3
-            successThreshold: 1
+          # livenessProbe:
+          #   httpGet:
+          #     path: /healthz
+          #     port: 3000
+          #   initialDelaySeconds: 300
+          #   periodSeconds: 3
+          # readinessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: 3000
+          #   initialDelaySeconds: 30
+          #   periodSeconds: 3
+          #   timeoutSeconds: 2
+          #   failureThreshold: 3
+          #   successThreshold: 1
       
 
 # Service for the front end
@@ -58,9 +58,11 @@ metadata:
     app: Qr-app
     type: frontend
 spec:
+  type: NodePort
   selector:
     app: Qr-app
   ports:
   - port: 3000
     targetPort: 3000
+    nodePort: 30500
       
