--- a/metrics-routing/ingressnginx.yml
+++ b/metrics-routing/ingressnginx.yml
@@ -23,7 +23,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: Qr-app-ingress
+  name: qr-app-ingress
   namespace: qr-app
   labels:
     app: frontend
