increased resources because of a CrashLoopBackOff error

--- a/manifest/frontend.yml
+++ b/manifest/frontend.yml
@@ -23,28 +23,28 @@ spec:
           image: zenitugo/frontend:latest
           resources:
             requests:
-              cpu: "250m"
-              memory: "64Mi"
-            limits:
               cpu: "500m"
               memory: "128Mi"
+            limits:
+              cpu: "1"
+              memory: "256Mi"
           ports:
           - containerPort: 3000
-          # livenessProbe:
-          #   httpGet:
-          #     path: /healthz
-          #     port: 3000
-          #   initialDelaySeconds: 300
-          #   periodSeconds: 3
-          # readinessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: 3000
-          #   initialDelaySeconds: 30
-          #   periodSeconds: 3
-          #   timeoutSeconds: 2
-          #   failureThreshold: 3
-          #   successThreshold: 1
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 3000
+            initialDelaySeconds: 300
+            periodSeconds: 3
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 3000
+            initialDelaySeconds: 30
+            periodSeconds: 3
+            timeoutSeconds: 2
+            failureThreshold: 3
+            successThreshold: 1
       
 
 # Service for the front end
