commented out the liveness and readiness probe because path to healthz was not written the source code basr

--- a/manifest/backend.yml
+++ b/manifest/backend.yml
@@ -45,21 +45,21 @@ spec:
               memory: "128Mi"
           ports:
           - containerPort: 8000
-          livenessProbe:
-            httpGet:
-              path: /healthz
-              port: 8000
-            initialDelaySeconds: 300
-            periodSeconds: 3
-          readinessProbe:
-            httpGet:
-              path: /
-              port: 8000
-            initialDelaySeconds: 30
-            periodSeconds: 3
-            timeoutSeconds: 2
-            failureThreshold: 3
-            successThreshold: 1
+          # livenessProbe:
+          #   httpGet:
+          #     path: /healthz
+          #     port: 8000
+          #   initialDelaySeconds: 300
+          #   periodSeconds: 3
+          # readinessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: 8000
+          #   initialDelaySeconds: 30
+          #   periodSeconds: 3
+          #   timeoutSeconds: 2
+          #   failureThreshold: 3
+          #   successThreshold: 1
       
 
 # Service for the backend
