--- a/metrics-routing/ingressnginx.yml
+++ b/metrics-routing/ingressnginx.yml
@@ -18,6 +18,25 @@ spec:
             class: nginx 
 
 
+
+# Creation of certificate
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: qr-app-cert
+  namespace: qr-app
+spec:
+  secretName: qr-cert-tls
+  issuerRef:
+    name: letsencrypt-prod
+    kind: ClusterIssuer
+  dnsNames:
+  - qr.sapphireaura.com.ng
+
+
+  
+
 # Ingress controller routing request to the front-end service 
 ---
 apiVersion: networking.k8s.io/v1
@@ -31,13 +50,14 @@ metadata:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-prod
     nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/ssl-redirect: "true" 
 spec:
   ingressClassName: nginx
   rules:
   - host: qr.sapphireaura.com.ng
     http:
       paths:
-      - pathType: Prefix
+      - pathType: ImplementationSpecific
         path: /api(/|$)(.*)
         backend:
           service:
@@ -56,5 +76,5 @@ spec:
   tls:
   - hosts:
       - qr.sapphireaura.com.ng
-    secretName: letsencrypt-prod
+    secretName: qr-cert-tls 
     
