--- a/manifest/frontend.yml
+++ b/manifest/frontend.yml
@@ -30,10 +30,10 @@ spec:
           resources:
             requests:
               cpu: "500m"
-              memory: "256Mi"
+              memory: "512Mi"
             limits:
               cpu: "1"
-              memory: "512Mi"
+              memory: "1Gi"
           ports:
           - containerPort: 3000
           # livenessProbe:
