changed the structure of writing the code to build front end image

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,10 @@ jobs:
     - name: Build and push Frontend Docker image
       run: |
         cd front-end-nextjs
-        docker build --build-arg REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }} -t ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest .
+        docker build \
+        --build-arg REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }} \
+        -t ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest \
+        .
 
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest
 
