--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,7 @@ jobs:
     - name: Build and push Frontend Docker image
       run: |
         cd front-end-nextjs
-        docker build \
+        docker buildx build \
         --build-arg REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }} \
         -t ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest \
         -f Dockerfile .
