--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,9 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      uses: docker/build-push-action@v6                   #docker/setup-buildx-action@v3
+      with:
+        push: true
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
@@ -74,10 +76,10 @@ jobs:
     - name: Build and push Frontend Docker image
       run: |
         cd front-end-nextjs
-        docker buildx build \
+        docker build \
         --build-arg REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }} \
         -t ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest \
-        -f Dockerfile .
+        .
 
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest
 
