--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -199,5 +199,6 @@ jobs:
         run: |
           cd terraform-eks
           terraform init
+          terraform force-unlock -force e731fdd8-5117-2bbb-ed00-aa3d35552bb0
           terraform destroy -var-file=terraform.tfvars -auto-approve      
 
