--- a/routing/ingressnginx.yml
+++ b/routing/ingressnginx.yml
@@ -49,7 +49,6 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-prod
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/ssl-redirect: "true" 
 spec:
   ingressClassName: nginx
@@ -57,8 +56,8 @@ spec:
   - host: qr.sapphireaura.com.ng
     http:
       paths:
-      - pathType: Prefix #ImplementationSpecific
-        path:   /api(/|$)(.*) #/api/generate-qr/ 
+      - pathType: Exact #ImplementationSpecific
+        path:   /api/generate-qr/
         backend:
           service:
             name: backend-service
